# AI_travel_planner

./: README.md  pyproject.toml  travel_ui.py
crew/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  travel_ui.py
crew/src/crew/: main.py  travelcrew.py
crew/src/crew/config/: tasks.yaml
crew/src/crew/tools/: calculator_tool.py  serper.py
src/crew/: main.py
src/crew/config/: agents.yaml
src/crew/tools/: opnbnb.py  scrape_website.py
